--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-androidxCore = "1.9.0"
+androidxCore = "1.12.0"
 androidxLifecycle = "2.7.0"
-androidxActivity = "1.8.0"
+androidxActivity = "1.8.2"
 comGoogleDagger = "2.49"
 desugar_jdk_libs = "2.0.4"
 espressoCore = "3.5.1"
@@ -14,6 +14,8 @@ androidxNavigation = "2.7.7"
 agp = "8.1.2"
 kotlin = "1.8.10"
 compose-bom = "2023.03.00"
+appcompat = "1.6.1"
+material = "1.11.0"
 
 [libraries]
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
@@ -39,8 +41,14 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "comGoogleDagger" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
+
+[bundles]
+composeDependencies = ["ui", "ui-graphics", "ui-tooling-preview", "material3", "androidx-activity-compose"]
